parser.output
Terminals unused in grammar

   STAR


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID
   11       | ID ArrayList

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmList RC

   18 StmList: /* empty */
   19        | Stmt StmList

   20 Stmt: Exp SEMI
   21     | CompSt
   22     | RETURN Exp SEMI
   23     | IF LP Exp RP Stmt
   24     | IF LP Exp RP Stmt ELSE Stmt
   25     | WHILE LP Exp RP Stmt

   26 DefList: /* empty */
   27        | Def DefList

   28 Def: Specifier DecList SEMI

   29 DecList: Dec
   30        | Dec COMMA DecList

   31 Dec: VarDec
   32    | VarDec ASSIGNOP Exp

   33 Exp: VarDec ASSIGNOP Exp
   34    | VarDec PLUSASSIGN Exp
   35    | VarDec MINUSASSIGN Exp
   36    | VarDec MULTASSIGN Exp
   37    | VarDec DIVASSIGN Exp
   38    | VarDec PERASSIGN Exp
   39    | Exp AND Exp
   40    | Exp OR Exp
   41    | Exp RELOP Exp
   42    | Exp PLUS Exp
   43    | Exp MINUS Exp
   44    | Exp MULT Exp
   45    | Exp DIV Exp
   46    | Exp PER Exp
   47    | Exp DPLUS
   48    | DPLUS Exp
   49    | Exp DMINUS
   50    | DMINUS Exp
   51    | LP Exp RP
   52    | MINUS Exp
   53    | PLUS Exp
   54    | NOT Exp
   55    | ID LP Args RP
   56    | ID LP RP
   57    | ID
   58    | ID ArrayList
   59    | INT
   60    | FLOAT
   61    | CHAR

   62 Args: Exp COMMA Args
   63     | Exp

   64 ArrayList: ArrayChild ArrayList
   65          | ArrayChild

   66 ArrayChild: LM INT RM


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 59 66
ID (259) 10 11 12 13 55 56 57 58
RELOP (260) 41
TYPE (261) 7
CHAR (262) 61
FLOAT (263) 60
LP (264) 12 13 23 24 25 51 55 56
RP (265) 12 13 23 24 25 51 55 56
LC (266) 17
RC (267) 17
SEMI (268) 4 6 20 22 28
COMMA (269) 9 15 30 62
LM (270) 66
RM (271) 66
PLUS (272) 42 53
MINUS (273) 43 52
STAR (274)
DIV (275) 45
PER (276) 46
ASSIGNOP (277) 32 33
AND (278) 39
OR (279) 40
NOT (280) 54
IF (281) 23 24
ELSE (282) 24
WHILE (283) 25
RETURN (284) 22
DPLUS (285) 47 48
DMINUS (286) 49 50
PLUSASSIGN (287) 34
MINUSASSIGN (288) 35
MULTASSIGN (289) 36
DIVASSIGN (290) 37
PERASSIGN (291) 38
MULT (292) 44
FDMINUS (293)
FDPLUS (294)
UPLUS (295)
UMINUS (296)
LOWER_THEN_ELSE (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
ExtDefList (45)
    on left: 2 3, on right: 1 3
ExtDef (46)
    on left: 4 5 6, on right: 3
Specifier (47)
    on left: 7, on right: 4 5 16 28
ExtDecList (48)
    on left: 8 9, on right: 4 9
VarDec (49)
    on left: 10 11, on right: 8 9 16 31 32 33 34 35 36 37 38
FuncDec (50)
    on left: 12 13, on right: 5
VarList (51)
    on left: 14 15, on right: 12 15
ParamDec (52)
    on left: 16, on right: 14 15
CompSt (53)
    on left: 17, on right: 5 21
StmList (54)
    on left: 18 19, on right: 17 19
Stmt (55)
    on left: 20 21 22 23 24 25, on right: 19 23 24 25
DefList (56)
    on left: 26 27, on right: 17 27
Def (57)
    on left: 28, on right: 27
DecList (58)
    on left: 29 30, on right: 28 30
Dec (59)
    on left: 31 32, on right: 29 30
Exp (60)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 59 60 61, on right: 20 22 23 24 25 32 33
    34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    62 63
Args (61)
    on left: 62 63, on right: 55 62
ArrayList (62)
    on left: 64 65, on right: 11 58 64
ArrayChild (63)
    on left: 66, on right: 64 65


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   11       | ID . ArrayList
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 14
    LM  shift, and go to state 15

    $default  reduce using rule 10 (VarDec)

    ArrayList   go to state 16
    ArrayChild  go to state 17


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 18


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 19

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 20

    CompSt  go to state 21


state 14

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 22

    Specifier  go to state 23
    VarList    go to state 24
    ParamDec   go to state 25


state 15

   66 ArrayChild: LM . INT RM

    INT  shift, and go to state 26


state 16

   11 VarDec: ID ArrayList .

    $default  reduce using rule 11 (VarDec)


state 17

   64 ArrayList: ArrayChild . ArrayList
   65          | ArrayChild .

    LM  shift, and go to state 15

    $default  reduce using rule 65 (ArrayList)

    ArrayList   go to state 27
    ArrayChild  go to state 17


state 18

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 19

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 28

    ExtDecList  go to state 29
    VarDec      go to state 12


state 20

   17 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 26 (DefList)

    Specifier  go to state 30
    DefList    go to state 31
    Def        go to state 32


state 21

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 22

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


state 23

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 28

    VarDec  go to state 33


state 24

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 34


state 25

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 35

    $default  reduce using rule 14 (VarList)


state 26

   66 ArrayChild: LM INT . RM

    RM  shift, and go to state 36


state 27

   64 ArrayList: ArrayChild ArrayList .

    $default  reduce using rule 64 (ArrayList)


state 28

   10 VarDec: ID .
   11       | ID . ArrayList

    LM  shift, and go to state 15

    $default  reduce using rule 10 (VarDec)

    ArrayList   go to state 16
    ArrayChild  go to state 17


state 29

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 30

   28 Def: Specifier . DecList SEMI

    ID  shift, and go to state 28

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


state 31

   17 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    LC      shift, and go to state 20
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    RETURN  shift, and go to state 50
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    $default  reduce using rule 18 (StmList)

    VarDec   go to state 53
    CompSt   go to state 54
    StmList  go to state 55
    Stmt     go to state 56
    Exp      go to state 57


state 32

   27 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 26 (DefList)

    Specifier  go to state 30
    DefList    go to state 58
    Def        go to state 32


state 33

   16 ParamDec: Specifier VarDec .

    $default  reduce using rule 16 (ParamDec)


state 34

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


state 35

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 23
    VarList    go to state 59
    ParamDec   go to state 25


state 36

   66 ArrayChild: LM INT RM .

    $default  reduce using rule 66 (ArrayChild)


state 37

   31 Dec: VarDec .
   32    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 60

    $default  reduce using rule 31 (Dec)


state 38

   28 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 61


state 39

   29 DecList: Dec .
   30        | Dec . COMMA DecList

    COMMA  shift, and go to state 62

    $default  reduce using rule 29 (DecList)


state 40

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


state 41

   10 VarDec: ID .
   11       | ID . ArrayList
   55 Exp: ID . LP Args RP
   56    | ID . LP RP
   57    | ID .
   58    | ID . ArrayList

    LP  shift, and go to state 63
    LM  shift, and go to state 15

    ASSIGNOP     reduce using rule 10 (VarDec)
    PLUSASSIGN   reduce using rule 10 (VarDec)
    MINUSASSIGN  reduce using rule 10 (VarDec)
    MULTASSIGN   reduce using rule 10 (VarDec)
    DIVASSIGN    reduce using rule 10 (VarDec)
    PERASSIGN    reduce using rule 10 (VarDec)
    $default     reduce using rule 57 (Exp)

    ArrayList   go to state 64
    ArrayChild  go to state 17


state 42

   61 Exp: CHAR .

    $default  reduce using rule 61 (Exp)


state 43

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


state 44

   51 Exp: LP . Exp RP

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 65


state 45

   53 Exp: PLUS . Exp

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 66


state 46

   52 Exp: MINUS . Exp

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 67


state 47

   54 Exp: NOT . Exp

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 68


state 48

   23 Stmt: IF . LP Exp RP Stmt
   24     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 69


state 49

   25 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 70


state 50

   22 Stmt: RETURN . Exp SEMI

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 71


state 51

   48 Exp: DPLUS . Exp

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 72


state 52

   50 Exp: DMINUS . Exp

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 73


state 53

   33 Exp: VarDec . ASSIGNOP Exp
   34    | VarDec . PLUSASSIGN Exp
   35    | VarDec . MINUSASSIGN Exp
   36    | VarDec . MULTASSIGN Exp
   37    | VarDec . DIVASSIGN Exp
   38    | VarDec . PERASSIGN Exp

    ASSIGNOP     shift, and go to state 74
    PLUSASSIGN   shift, and go to state 75
    MINUSASSIGN  shift, and go to state 76
    MULTASSIGN   shift, and go to state 77
    DIVASSIGN    shift, and go to state 78
    PERASSIGN    shift, and go to state 79


state 54

   21 Stmt: CompSt .

    $default  reduce using rule 21 (Stmt)


state 55

   17 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 80


state 56

   19 StmList: Stmt . StmList

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    LC      shift, and go to state 20
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    RETURN  shift, and go to state 50
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    $default  reduce using rule 18 (StmList)

    VarDec   go to state 53
    CompSt   go to state 54
    StmList  go to state 81
    Stmt     go to state 56
    Exp      go to state 57


state 57

   20 Stmt: Exp . SEMI
   39 Exp: Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . RELOP Exp
   42    | Exp . PLUS Exp
   43    | Exp . MINUS Exp
   44    | Exp . MULT Exp
   45    | Exp . DIV Exp
   46    | Exp . PER Exp
   47    | Exp . DPLUS
   49    | Exp . DMINUS

    RELOP   shift, and go to state 82
    SEMI    shift, and go to state 83
    PLUS    shift, and go to state 84
    MINUS   shift, and go to state 85
    DIV     shift, and go to state 86
    PER     shift, and go to state 87
    AND     shift, and go to state 88
    OR      shift, and go to state 89
    DPLUS   shift, and go to state 90
    DMINUS  shift, and go to state 91
    MULT    shift, and go to state 92


state 58

   27 DefList: Def DefList .

    $default  reduce using rule 27 (DefList)


state 59

   15 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 15 (VarList)


state 60

   32 Dec: VarDec ASSIGNOP . Exp

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 93


state 61

   28 Def: Specifier DecList SEMI .

    $default  reduce using rule 28 (Def)


state 62

   30 DecList: Dec COMMA . DecList

    ID  shift, and go to state 28

    VarDec   go to state 37
    DecList  go to state 94
    Dec      go to state 39


state 63

   55 Exp: ID LP . Args RP
   56    | ID LP . RP

    INT     shift, and go to state 40
    ID      shift, and go to state 41
    CHAR    shift, and go to state 42
    FLOAT   shift, and go to state 43
    LP      shift, and go to state 44
    RP      shift, and go to state 95
    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    NOT     shift, and go to state 47
    DPLUS   shift, and go to state 51
    DMINUS  shift, and go to state 52

    VarDec  go to state 53
    Exp     go to state 96
    Args    go to state 97


state 64

   11 VarDec: ID ArrayList .
   58 Exp: ID ArrayList .

    ASSIGNOP     reduce using rule 11 (VarDec)
    PLUSASSIGN   reduce using rule 11 (VarDec)
    MINUSASSIGN  reduce using rule 11 (VarDec)
    MULTASSIGN   reduce using rule 11 (VarDec)
    DIVASSIGN    reduce using rule 11 (VarDec)
    PERASSIGN    reduce using rule 11 (VarDec)
    $default     reduce using rule 58 (Exp)


state 65

   39 Exp: Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . RELOP Exp
   42    | Exp . PLUS Exp
   43    | Exp . MINUS Exp
   44    | Exp . MULT Exp
   45    | Exp . DIV Exp
   46    | Exp . PER Exp
   47    | Exp . DPLUS
   49    | Exp . DMINUS
   51    | LP Exp . RP

    RELOP   shift, and go to state 82
    RP      shift, and go to state 98
    PLUS    shift, and go to state 84
    MINUS   shift, and go to state 85
    DIV     shift, and go to state 86
    PER     shift, and go to state 87
    AND     shift, and go to state 88
    OR      shift, and go to state 89
    DPLUS   shift, and go to state 90
    DMINUS  shift, and go to state 91
    MULT    shift, and go to state 92


state 66
